--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "export NODE_PATH=$NODE_PATH:./src && ./node_modules/.bin/budo index.js --dir=dist --live -- -p [ css-modulesify -o dist/main.css --after autoprefixer --autoprefixer.browsers '> 5%' --json dist/css-modules.json] -o dist/index.js"
+    "start": "mkdir -p dist && export NODE_PATH=$NODE_PATH:./src && ./node_modules/.bin/budo index.js --dir=dist --live -- -p [ css-modulesify -o dist/main.css --after autoprefixer --autoprefixer.browsers '> 5%' --json dist/css-modules.json] -o dist/index.js"
   },
   "dependencies": {
     "autoprefixer": "^6.1.2",
     "babel-plugin-syntax-async-functions": "^6.3.13",
+    "babel-plugin-transform-react-jsx": "^6.6.0",
     "babel-plugin-transform-regenerator": "^6.3.18",
+    "babel-polyfill": "^6.6.1",
+    "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
+    "budo": "^8.0.4",
     "classnames": "^2.2.1",
     "co": "^4.6.0",
     "constant-keys": "0.0.2",
@@ -20,9 +24,11 @@
     "es6-promise": "^3.0.2",
     "ramda": "^0.18.0",
     "react": "^0.14.3",
+    "react-dom": "^0.14.7",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
     "redux-debug": "^1.0.3",
+    "redux-logger": "^2.6.1",
     "redux-promise": "^0.5.0",
     "redux-thunk": "^1.0.0",
     "sassify": "^0.9.1"
