--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "autoprefixer": "^6.1.2",
     "babel-plugin-syntax-async-functions": "^6.3.13",
     "babel-plugin-transform-react-jsx": "^6.6.0",
-    "babel-plugin-transform-regenerator": "^6.3.18",
+    "babel-plugin-transform-regenerator": "^6.9.0",
     "babel-polyfill": "^6.6.1",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
@@ -23,13 +23,14 @@
     "css-modulesify": "^0.15.0",
     "es6-promise": "^3.0.2",
     "ramda": "^0.18.0",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.7",
+    "react": "^0.14.8",
+    "react-dom": "^0.14.8",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
     "redux-debug": "^1.0.3",
     "redux-logger": "^2.6.1",
     "redux-promise": "^0.5.0",
+    "redux-saga": "^0.10.4",
     "redux-thunk": "^1.0.0",
     "sassify": "^0.9.1"
   },
